syntax = "proto3";
package payment;
option java_package = "com.ferza17.ecommercemicroservicesv2.v1.payment";


import "google/protobuf/timestamp.proto";
import "v1/payment/enum.proto";

// REFERRED TO DATABASE SCHEMA
message PaymentItem {
  string id = 1 ;
  string productId = 2 ;
  double amount = 3 ;
  int32 qty = 4 ;
  string payment_id = 5 ;
  google.protobuf.Timestamp created_at = 8 ;
  google.protobuf.Timestamp updated_at = 9 ;
  optional google.protobuf.Timestamp discarded_at = 10 ;
}

// REFERRED TO DATABASE SCHEMA
message Provider {
  string id = 1;
  string name = 2 ;
  payment.ProviderMethod method = 3 ;
  google.protobuf.Timestamp created_at = 8 ;
  google.protobuf.Timestamp updated_at = 9 ;
  optional google.protobuf.Timestamp discarded_at = 10 ;
}

// REFERRED TO DATABASE SCHEMA
message Payment {
  string id = 1 ;
  string code = 2 ;
  double total_price = 4 ;
  payment.PaymentStatus status = 5 ;
  string provider_id = 6 ;
  string user_id = 7 ;
  repeated payment.PaymentItem items = 8;
  google.protobuf.Timestamp created_at = 9 ;
  google.protobuf.Timestamp updated_at = 10 ;
  optional google.protobuf.Timestamp discarded_at = 11 ;
}